# unused-packages-empty-ghc-options

./: CHANGELOG.md  README.md  cabal.project  unused-packages-empty-ghc-options.cabal
A/: lib-a.cabal
A/src/: A.hs
B/: lib-b.cabal
B/src/: B.hs
