cabal-version:      3.4
name:               unused-packages-empty-ghc-options
version:            0.1.0.0
synopsis:           Reproduction of a cabal error.
-- description:
homepage:
    https://github.com/typechecker/unused-packages-empty-ghc-options#readme

license:            MPL-2.0
license-file:       LICENSE
author:             Phil de Joux
maintainer:         philderbeast@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: GHC2021
