cabal-version:      3.0
name:               lib-a
version:            0.1.0.0
synopsis:           Reproduction of a cabal error.
homepage:
    https://github.com/typechecker/unused-packages-empty-ghc-options#readme

license:            MPL-2.0
license-file:       LICENSE
author:             Phil de Joux
maintainer:         philderbeast@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:  A
    build-depends: base
    hs-source-dirs:   src
    default-language: Haskell2010
