cabal-version:      3.0
name:               lib-b
version:            0.1.0.0
synopsis:           Reproduction of a cabal error.
homepage:
    https://github.com/typechecker/unused-packages-empty-ghc-options#readme

license:            MPL-2.0
license-file:       LICENSE
author:             Phil de Joux
maintainer:         philderbeast@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common global-options
  -- By default, use these ghc-options in all components.
  ghc-options:
    -Wall -Wtabs -Wincomplete-uni-patterns -Werror=unused-packages
    -Werror=missing-home-modules -Werror=star-is-type -eventlog -O0
    +RTS -A32M -RTS

  default-language: Haskell2010

common global-exe-options
  ghc-options: -threaded -rtsopts "-with-rtsopts=-N -T"

common options
  import:             global-options
  ghc-options:  
      
  default-language: Haskell2010

library
    import:           options
    exposed-modules:  B
    build-depends:
          lib-a
        , base
    hs-source-dirs:   src
    default-language: Haskell2010
